MCR-3029 use switch pattern matching